public interface DVDRate {
    public int getRate(int days);
}
