@startuml


interface DVDRate{
getCost(): int
}
class ChildrenRate{
getCost(): int
}
class NewReleaseRate{
getCost(): int
}
class OldReleaseRate{
getCost(): int
}
class DVDRentalRate{
-DVDRate:DVDRate
+executePrice(): int
}



NewReleaseRate --|> DVDRate
OldReleaseRate --|> DVDRate
ChildrenRate --|> DVDRate
DVDRate <|-- DVDRentalRate





@enduml